--- a/index.html
+++ b/index.html
@@ -1,38 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
-    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="style.css">
     <title>Syntax-savvy</title>
 </head>
+
 <body>
     <!-- header  -->
-<header>
-    <!-- navigation Bar -->
-    <div class="navBar">
-        <!-- navigation Items -->
-        <div class="logo">
-            <a href="#">Syntax-C-Knowledge</a>
+    <header>
+        <!-- navigation Bar -->
+        <div class="navBar">
+            <!-- navigation Items -->
+            <div class="logo">
+                <a href="#">Syntax-C-Knowledge</a>
+            </div>
+            <!-- nav links -->
+            <ul class="links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">C-History</a></li>
+                <li><a href="#">Os</a></li>
+                <li><a href="#">Chip</a></li>
+            </ul>
+            <a href="" class="action_btn">
+                Get Start</a>
+            <div class="toggle_btn">
+                <i class="fa-solid fa-bars" style="color: #ece6ee;"></i>
+            </div>
         </div>
-        <!-- nav links -->
-        <ul class="links">
+
+        <div class="drop-downMenu">
             <li><a href="#">Home</a></li>
             <li><a href="#">C-History</a></li>
             <li><a href="#">Os</a></li>
             <li><a href="#">Chip</a></li>
-        </ul>
-        <a href="" class="action_btn">
-            <div class="toggle_btn">
-                <i class="fa-solid fa-bars" style="color: #870fa9;"></i>
-            </div>
-        </a>
-    </div>
-</header>
+            <li> <a href="" class="action_btn">
+                    Get Start</a></li>
+        </div>
+    </header>
+    <script>
+        const toggle_btn = document.querySelector('.toggle_btn');
+        const toggleBtnIcon = document.querySelector('.toggle_btn i');
+        const dropDownMenu = document.querySelector('.toggle_menu');
+
+        toggle_btn.onClick = function () {
+            dropDownMenu.classList.toggle('open')
+        }
+    </script>
 </body>
+
 </html>
