--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <div class="home">
         <div class="t1">
             <h1 class="t1">HELLO WELCOME TO </h1>
-            <h1 class="t2">SYNTAX SOFT HELPER</h1>
+            <h1 class="t2">SYNTAX Lorem</h1>
             <button class="b1">Read documentation</button>
         </div>
     </div>
@@ -258,7 +258,7 @@
     </div>
     <!-- chat help  -->
     <div class="Chat-bot">
-        <h1 class="t3">Hello this is AI Help Section
+        <h1 class="t3">Hello this is lorem 
         <img class="Bg" src="assets/img/chatgpt.png">
         </h1>
     </div>
