Added snap scroll, Fixed some alignmets, Fixed overflow, Separated sections, Added side text content to the chat sections as you said

--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-Html
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,7 +14,9 @@ Html
     <title>Syntax-C-Knowledge</title>
 </head>
 
-<body>
+<body class="">
+    <div class="body-container">
+
     <div class="nav-section">
         <!--=============== HEADER ===============-->
         <header class="header">
@@ -242,33 +241,54 @@ Html
     </div>
 
 
-
     <div class="home-section">
-        <!-- HTML HOME  -->
-        <div class="home">
+         HTML HOME 
+        <div class="home home-text-container">
             <div class="t1">
                 <h1 class="t1">HELLO WELCOME TO </h1>
                 <h1 class="t2">SYNTAX Lorem</h1>
                 <button class="b1">Read documentation</button>
             </div>
         </div>
-        <div class="image">
-            <img src="assets/img/banner.png">
-        </div>
-        <div class="image2">
-            <img src="assets/img/dimond.png">
-        </div>
-        <div class="image3">
-            <img src="assets/img/egg.png">
+        <div class="img-container">
+            <div class="image">
+                <img src="assets/img/banner.png">
+            </div>
+            <div class="image2">
+                <img src="assets/img/dimond.png">
+            </div>
+            <div class="image3">
+                <img src="assets/img/egg.png">
+            </div>
         </div>
     </div>
 
 
     <!-- chat help  -->
     <div class="chat-section">
-
+        <div class="chat-text-wrap">
+            <div class="chat-text-container">
+                <div class="chat-title-sections">
+                    <h3>1. Lorem Ispum</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit atque dicta ipsa eum, doloribus laboriosam repellat praesentium sit eveniet rerum totam temporibus voluptatem odio hic porro magni inventore tempora asperiores quod quos, in error omnis at! Corporis, nihil hic consectetur ullam rem error aliquid maxime, eos, delectus ipsa animi iure!</p>
+                </div>
+                <div class="chat-title-sections">
+                    <h3>2. Lorem Ispum</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit atque dicta ipsa eum, doloribus laboriosam repellat praesentium sit eveniet rerum totam temporibus voluptatem odio hic porro magni inventore tempora asperiores quod quos, in error omnis at! Corporis, nihil hic consectetur ullam rem error aliquid maxime, eos, delectus ipsa animi iure!</p>
+                </div>
+                <div class="chat-title-sections">
+                    <h3>3. Lorem Ispum</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit atque dicta ipsa eum, doloribus laboriosam repellat praesentium sit eveniet rerum totam temporibus voluptatem odio hic porro magni inventore tempora asperiores quod quos, in error omnis at! Corporis, nihil hic consectetur ullam rem error aliquid maxime, eos, delectus ipsa animi iure!</p>
+                </div>
+            </div>
+        </div>
     </div>
 
+    <!-- next sec  -->
+    <div class="next-sec">
+
+    </div>
+</div>
 
 
 
